--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button color="red" [bg]="currentBg" (click)="onClick()">Increment</button>
+<button color="red" [p]="3" [bg]="currentBg" (click)="onClick()">Increment</button>
 {{ count }}
 <br><br>
-<button [m]="2" bg="hotpink" (click)="changeBg()">Change Bg</button>
+<button [m]="2" [px]="4" [py]="3" bg="hotpink" (click)="changeBg()">Change Bg</button>
